[package]
name = "dataset_to_jpegxl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# voca_rs = "1.14.0"
# jpegxl-rs = { version = "0.6.1" , features = ['vendored']}
execute = "0.2.11"
haphazard = "0.1.4"
clap = { version = "4.0.12", features = ["derive"] }
